src/objects/Kontakt__c.object
<CustomObject>
    <description>Kontakty prislúchajúce jednému bytu</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Kontakty</relationshipLabel>
        <relationshipName>Kontakty</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Byt__c</fullName>
        <label>Byt</label>
        <referenceTo>Byt__c</referenceTo>
        <relationshipLabel>Kontakty</relationshipLabel>
        <relationshipName>Kontakty</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prim_rny__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primárny</label>
        <type>Checkbox</type>
    </fields>
    <label>Kontakt</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meno</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kontakty</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>